src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Needed for Round Robin Lead Assignment</description>
        <displayFormat>{00000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Fax__c</fullName>
        <defaultValue>$User.Fax</defaultValue>
        <description>Fax number of the lead owner.</description>
        <label>Lead Owner Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Text__c</fullName>
        <label>Lead Owner (Text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <label>Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_Address__c</fullName>
        <label>Location 5 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_DBA_NAME__c</fullName>
        <label>Location 5 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Fax_Number__c</fullName>
        <label>Location 5 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Contact_Name__c</fullName>
        <label>Location 5 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Phone_Number__c</fullName>
        <label>Location 5 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Phone_Number__c</fullName>
        <label>Location 5 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Address__c</fullName>
        <label>Location 2 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_2_DBA_NAME__c</fullName>
        <label>Location 2 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Fax_Number__c</fullName>
        <label>Location 2 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Contact_Name__c</fullName>
        <label>Location 2 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Phone_Number__c</fullName>
        <label>Location 2 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Phone_Number__c</fullName>
        <label>Location 2 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 2: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_3_Address__c</fullName>
        <label>Location 3 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_DBA_NAME__c</fullName>
        <label>Location 3 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Fax_Number__c</fullName>
        <label>Location 3 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Contact_Name__c</fullName>
        <label>Location 3 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Phone_Number__c</fullName>
        <label>Location 3 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Phone_Number__c</fullName>
        <label>Location 3 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 3: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_4_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 4: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MI_Score__c</fullName>
        <label>MI Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_ID_Number__c</fullName>
        <label>Merchant ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mini_Application_Submitted__c</fullName>
        <label>Mini Application Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missing_Items__c</fullName>
        <formula>&quot;The Following Items are Missing:&quot; &amp; BR()
&amp; If( ISblank( Federal_Tax_ID_Number__c ), &quot;- Federal Tax ID&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Social_Security_Number__c ), &quot;- Principal 1 Social Security Number&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank(  Date_Of_Birth__c  ), &quot;- Principal 1 Date of Birth&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Number_of_Locations__c  ), &quot;- Number of Locations&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Landlord_Agent_Name__c ), &quot;- Landlord Name&quot; &amp; BR(),&quot;&quot; )
&amp; If( ISblank( Landlord_Agent_Phone_Number__c  ), &quot;- Landlord Phone&quot;,&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkt_Channels__c</fullName>
        <formula>case(LeadSource,&quot;Web-To-Lead&quot;,&quot;Internet&quot;,&quot;Other&quot;,&quot;Internet&quot;,&quot;Web-Call-In&quot;,&quot;Internet&quot;,&quot;Spanish Web-To-Lead&quot;,&quot;Internet&quot;,&quot;Quancor - HOT LEAD&quot;,&quot;TM&quot;,&quot;Quancor&quot;,&quot;TM&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Channels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkt_Month__c</fullName>
        <formula>text (Month(  DATEVALUE(CreatedDate) ))&amp;&quot;/&quot;&amp;text(Year( DATEVALUE(CreatedDate) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Reminder__c</fullName>
        <formula>If(ISPICKVAL(  Status , &quot;Initial Call Needed&quot;) , IMAGE(&quot;https://na5.salesforce.com/servlet/servlet.FileDownload?file=01570000000nx5H&quot;, &quot;Lead Status is Initial Call Needed&quot;),&quot;No Data is required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mktg Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Credit_Card_Sales__c</fullName>
        <label>Monthly Credit Card Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Salary__c</fullName>
        <label>Monthly Gross Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Visa_Mastercard_Volume__c</fullName>
        <label>Monthly Visa/Mastercard Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Accept Visa/MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,500 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,500 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000 - 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000 - 40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40,000 - 60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60,000 - 80,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80,000 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_1__c</fullName>
        <label>Monthly Volume (Ins Type 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_2__c</fullName>
        <label>Monthly Volume (Ins Type 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Ins_Type_3__c</fullName>
        <label>Monthly Volume (Ins Type 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Remaining_On_Site_Lease_Mortgage__c</fullName>
        <label>Time Remaining On Site Lease/Mortgage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_at_Current_Address__c</fullName>
        <label>Months at Current Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_at_Previous_Address__c</fullName>
        <label>Months at Previous Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_Current_Processor__c</fullName>
        <label>Months with Current Processor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <label>NAICS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Bank_Personal__c</fullName>
        <label>Name of Bank (Personal)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Lead_Source__c</fullName>
        <label>New Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>100% Paid Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAHOA - Post Card May 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameridial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Dialer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrata Web To Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail DMCK1106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail DMCK406</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail DMCK 506</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail DMPTM 0506</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experian List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExpertServ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury Statement Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini Web-to-Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NXGEN - Quancor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Card #2 51206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Card 51206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Card DMP 2406</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Card DMPC 506</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POSTCARD - GENERAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Partner_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Partner Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Count__c</fullName>
        <formula>if(OR( ISPICKVAL( Status , &quot;Not Interested&quot;),ISPICKVAL( Status , &quot;DO NOT CALL&quot;),ISPICKVAL( Status , &quot;Requested Information Only&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Interested Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Able to get funds elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted more money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term too short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This is not the right time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking for personal loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://notes.rapidadvance.com/notes/salesforcelead/&quot;&amp;CASESAFEID(Id),Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notes Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_terminal_at_location__c</fullName>
        <label>Number of terminal at location?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Since__c</fullName>
        <label>Length of time in business</label>
        <picklist>
            <picklistValues>
                <fullName>Less then 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months to 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year to 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 2 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Owner__c</fullName>
        <label>Original Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Income_Explination__c</fullName>
        <label>Other Income Explination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned_Business_Since__c</fullName>
        <label>Owned Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OwnerFax__c</fullName>
        <label>OwnerFax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P1_Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Creative__c</fullName>
        <label>PPC Creative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Application_Number__c</fullName>
        <label>Partner Application Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Credit_Score_txt__c</fullName>
        <label>Partner Credit Score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Ownership__c</fullName>
        <description>What percent of ownership does this person have of the business?</description>
        <label>Principal 1 Percent Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Credit_Score_text__c</fullName>
        <label>Personal Credit Score (text)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcard_Code__c</fullName>
        <description>This code will be on marketing material for tracking purposes.</description>
        <label>Reference Number (email &amp; postcard)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Present_Management_Since__c</fullName>
        <label>Present Management Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_1__c</fullName>
        <label>Previous Owner 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_2__c</fullName>
        <label>Previous Owner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_3__c</fullName>
        <label>Previous Owner 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_City__c</fullName>
        <label>Principal 1 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_Country__c</fullName>
        <label>Principal 1 Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_Email__c</fullName>
        <label>Principal 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_1_State__c</fullName>
        <label>Principal 1 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_1_Street_Address__c</fullName>
        <label>Principal 1 Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_1_Zip__c</fullName>
        <label>Principal 1 Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_City__c</fullName>
        <label>Principal 2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Date_Of_Birth__c</fullName>
        <label>Principal 2 Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_2_Email__c</fullName>
        <label>Principal 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_2_First_Name__c</fullName>
        <label>Principal 2 First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Last_Name__c</fullName>
        <label>Principal 2 Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Mobile__c</fullName>
        <label>Principal 2 Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_2_Percent_Ownership__c</fullName>
        <label>Principal 2 Percent Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Principal_2_Phone__c</fullName>
        <label>Principal 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_2_Social_Security__c</fullName>
        <label>Principal 2 Social Security</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_State__c</fullName>
        <label>Principal 2 State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_2_Street_Address__c</fullName>
        <label>Principal 2 Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_2_Zip__c</fullName>
        <label>Principal 2 Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Current_Annual_Income__c</fullName>
        <label>Principal Current Annual Income?</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Home_Phone_Number__c</fullName>
        <label>Principal 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Principal_Type__c</fullName>
        <label>Principal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Signer and Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer and Guarantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProMED_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProMED Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM &amp; Telephone Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking &amp; Money Market Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Plans &amp; Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance and Employee Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Servives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>ACH Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan w/MCA pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication ACH Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication Starter Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_txt__c</fullName>
        <label>Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>